Revision history for Perl extension Coro.

TODO: should explore PerlIO::coroaio (perl leaks like hell).
TODO: channel->maxsize(newsize)?
TODO: http://www.microsoft.com/msj/archive/s2ce.aspx

TODO: tutorial
TODO: in_eval, PL_tained
	- INCOMPATIBLE CHANGE: unreferenced coro objects will now be
          destroyed and cleaned up automatically (e.g. async { schedule }).
        - Coro::State->is_destroyed is now called is_zombie.
        - implement a Coro->safe_cancel method that might fail, but
          cancels in a "safer" way if it succeeds.
        - get rid of two hash-accesses when initialising a new Coro - this
          speeds up coro creation by almost a factor of two.
        - croak when a coro that is being cancelled tries to block
          (e.g. while executing a guard block), instead of crashing or
          deadlocking.
        - use a more robust and also faster method to identify Coro::State
          objects - speeds up everything a bit.
	- implement Coro->cancel in XS for a 20% speed improvement, and to
          be able to implement mutual cancellation.
	- speed up context switches by a percent or two by more efficiently
          allocating context stack entries.
        - implement Coro->join and Coro->on_destroy in XS for a speedup and
          a reduction in memory use.
        - cancelling a coro while it itself is cancelling another coro is
          now supported and working, instead of triggering an assertion.
	- be a bit more crash-resistant when calling (buggy) on_destroy
          callbacks (best effort).
        - move on_destroy into the slf_frame, to allow extension slf
          functions to have destructors.
        - get rid if coro refcounting - simply crash in other interpreter
          threads by nulling the pointers on clone.
        - simplify warn/die hook handling when loading Coro - the convoluted
          logic seems to be no longer neccessary.
        - use libecb instead of our own home-grown gcc hacks.
