@@ -8,6 +8,12 @@ TODO: tutorial
 TODO: in_eval, PL_tained
 	- INCOMPATIBLE CHANGE: unreferenced coro objects will now be
           destroyed and cleaned up automatically (e.g. async { schedule }).
+        - implement a JIT compiler for part of the thread switch code,
+          which gives a 50% speed improvement on threaded perls, and
+          about 4% on non-thraeded perls (so threaded perls now finally
+          reach about half the speed of non-threaded perls).
+        - avoid DEFSV and ERRSV, giving another 10% improvement
+          in thread switching.
         - Coro::State->is_destroyed is now called is_zombie.
         - implement a Coro->safe_cancel method that might fail, but
           cancels in a "safer" way if it succeeds.
